--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,eclipse,java,maven
+
+Server/
+dosirak_suzy/
